-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.3.0, 5.3.1, 5.4.0 Beta
-
None
-
Windows 8
"QJsonObject::remove" and "QJsonObject::erase" (and "QJsonObject::insert(key)" if there is already an item with the key in the object) somehow break the object causing corruption of non-latin object's key.
For Gerrit Dashboard: QTBUG-42270 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
108781,2 | Make sure remove() doesn't corrupt the json object | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |