tests/auto/corelib/json/tst_qtjson.cpp
@@ -33,6 +33,7 @@ DECL|function|parseDuplicateKeys
 DECL|function|parseNumbers
 DECL|function|parseStrings
 DECL|function|parseUnicodeEscapes
+DECL|function|removeNonLatinKey
 DECL|function|testArrayComfortOperators
 DECL|function|testArrayIteration
 DECL|function|testArrayNested
